// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`thread-message-feed child messages error - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root opened"
>
  <section
    class="body"
  >
    <thread-header-stub />
     
    <section
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="content"
      role="log"
    >
      <div
        class="chat-messages"
        role="list"
      >
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
         
        <div
          class="error-text error-box"
        >
          
          Error: Thread messages can't be fetched.
        
        </div>
         
        <intersect-stub>
          <div />
        </intersect-stub>
          
        <intersect-stub>
          <div />
        </intersect-stub>
      </div>
       
      <chat-input-stub
        roommember="true"
        thread="true"
        user="[object Object]"
      />
    </section>
  </section>
</div>
`;

exports[`thread-message-feed child messages loading - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root opened"
>
  <section
    class="body"
  >
    <thread-header-stub />
     
    <section
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="content"
      role="log"
    >
      <div
        class="chat-messages"
        role="list"
      >
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
         
        <div
          class="loading-message"
        >
          
          Loading thread 
          <loading-spinner-stub />
        </div>
         
        <intersect-stub>
          <div />
        </intersect-stub>
          
        <intersect-stub>
          <div />
        </intersect-stub>
      </div>
       
      <chat-input-stub
        roommember="true"
        thread="true"
        user="[object Object]"
      />
    </section>
  </section>
</div>
`;

exports[`thread-message-feed child messages opened - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root opened"
>
  <section
    class="body"
  >
    <thread-header-stub />
     
    <section
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="content"
      role="log"
    >
      <div
        class="chat-messages"
        role="list"
      >
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
         
        <!---->
         
        <intersect-stub>
          <div />
        </intersect-stub>
         
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
         
        <intersect-stub>
          <div />
        </intersect-stub>
      </div>
       
      <chat-input-stub
        roommember="true"
        thread="true"
        user="[object Object]"
      />
    </section>
  </section>
</div>
`;

exports[`thread-message-feed closed - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root"
>
  <!---->
</div>
`;

exports[`thread-message-feed dark theme - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root opened dark-theme"
>
  <section
    class="body"
  >
    <thread-header-stub />
     
    <section
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="content"
      role="log"
    >
      <div
        class="chat-messages"
        role="list"
      >
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
         
        <!---->
         
        <intersect-stub>
          <div />
        </intersect-stub>
          
        <intersect-stub>
          <div />
        </intersect-stub>
      </div>
       
      <chat-input-stub
        roommember="true"
        thread="true"
        user="[object Object]"
      />
    </section>
  </section>
</div>
`;

exports[`thread-message-feed missing parent message - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root opened"
>
  <section
    class="body"
  >
    <thread-header-stub />
     
    <section
      class="content"
    >
      <span
        class="error-text error-box"
      >
        
        Error: The message for this thread is unavailable. It was probably deleted.
      
      </span>
    </section>
  </section>
</div>
`;

exports[`thread-message-feed not room member - matches snapshot 1`] = `
<div
  class="js-thread-message-feed-root root opened"
>
  <section
    class="body"
  >
    <thread-header-stub />
     
    <section
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="content"
      role="log"
    >
      <div
        class="chat-messages"
        role="list"
      >
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
         
        <!---->
         
        <intersect-stub>
          <div />
        </intersect-stub>
         
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
        <chat-item-stub
          message="[object Object]"
          usecompactstyles="true"
        />
         
        <intersect-stub>
          <div />
        </intersect-stub>
      </div>
       
      <join-or-sign-in-button-stub />
    </section>
  </section>
</div>
`;
